// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph/> components renders properly with passed children 1`] = `
<p
  class="Paragraph-sc-1iyx54k-0 clzspR"
>
  Lorem ipsum dolor sit amet
</p>
`;

exports[`<Paragraph/> components renders properly with size prop 1`] = `
<p
  class="Paragraph-sc-1iyx54k-0 ehZnXz"
>
  Lorem ipsum dolor sit amet
</p>
`;
